--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Denon remote",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint bin test"
   },
   "author": "Kent Fjellstad",
   "license": "ISC",
@@ -12,11 +13,12 @@
     "bunyan": "^1.8.12",
     "convict": "^4.0.0",
     "denon-client": "^0.2.2",
-    "eslint": "^4.5.0",
     "hapi": "^16.5.2"
   },
   "devDependencies": {
+    "eslint": "^4.7.2",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "tap": "^10.7.1"
   }
 }
