--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bin/index.js",
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
-    "lint": "eslint bin test"
+    "lint": "eslint bin"
   },
   "author": "Kent Fjellstad",
   "license": "ISC",
